# ControlsChallenge

./: CMakeLists.txt  README.md  control.c
lib/: .controlLib.h.swp  controlLib.c  controlLib.h  scalerLib.c  scalerLib.h  utility.h
test/: test_controlLib.c
